test/end-to-end/runnable/no-trailing-comma.crow
main void()
	info log "hello".f

f string(
	a string
)
	a
