test/end-to-end/parse-errors/line-continuation-invalid.crow
main void()
	info \ log
		"hello, world!"
